kube/client/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-game-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-game-client
  template:
    metadata:
      labels:
        app: online-game-client
    spec:
      containers:
        - name: online-game-client
          image: localhost:5001/online-game-client:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
