kube/client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: online-game-client
spec:
  selector:
    app: online-game-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
